--- a/ingatlan/requirements.txt
+++ b/ingatlan/requirements.txt
@@ -1,21 +1,24 @@
 asn1crypto==0.24.0
 attrs==18.2.0
 Automat==0.7.0
-beautifulsoup4==4.6.3
-certifi==2018.10.15
+certifi==2018.11.29
 cffi==1.11.5
 chardet==3.0.4
 constantly==15.1.0
 cryptography==2.4.2
 cssselect==1.0.3
-enum34==1.1.6
-functools32==3.2.3.post2
+decorator==4.3.0
 hyperlink==18.0.0
 idna==2.7
 incremental==17.5.0
-ipaddress==1.0.22
+ipython-genutils==0.2.0
+jsonschema==2.6.0
+jupyter-core==4.4.0
 lxml==4.2.5
+nbformat==4.4.0
+numpy==1.15.4
 parsel==1.5.1
+plotly==3.4.2
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
 pycparser==2.19
@@ -23,12 +26,15 @@ PyDispatcher==2.0.5
 PyHamcrest==1.9.0
 PyMySQL==0.9.2
 pyOpenSSL==18.0.0
+pytz==2018.7
 queuelib==1.5.0
 requests==2.20.1
+retrying==1.3.3
 Scrapy==1.5.1
 service-identity==17.0.0
 six==1.11.0
 SQLAlchemy==1.2.14
+traitlets==4.3.2
 Twisted==18.9.0
 urllib3==1.24.1
 w3lib==1.19.0
